tests/compile_fail/borrow/multiple_field_attrs.rs
#[derive(derive_more::Borrow)]
struct Foo(
    #[borrow]
    #[borrow(forward)]
    String,
);

fn main() {}
