tests/compile_fail/borrow/multiple_field_attrs.stderr
error: only single kind of `#[borrow(...)]` attribute is allowed here
 --> tests/compile_fail/borrow/multiple_field_attrs.rs:4:5
  |
4 |     #[borrow(forward)]
  |     ^
